--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="controls">
             <div class="filters">
-                <spam id="todos">Todos</spam>
-                <spam id="pendentes">Pedentes</spam>
-                <spam id="finalizados">Finalizados</spam>
+                <spam id="active">Todos</spam>
+                <spam id="pending">Pedentes</spam>
+                <spam id="completed">Finalizados</spam>
             </div>
             <button class="clear-btn">Limpar</button>
     </div>
